员工管理相关代码

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>sky-common</module>
         <module>sky-pojo</module>
         <module>sky-server</module>
+        <module>sky-server</module>
     </modules>
     <properties>
         <mybatis.spring>2.2.0</mybatis.spring>
